--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,3 +6,8 @@ body{
     color: green;
     background: url('../assets/webpack.jpg');
 }
+canvas{
+    position:absolute;
+    top:0;
+    left:0;
+}
